test/CheckError/Const/ModifyConstLocalVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export void f() {
	const int value = 0;
	// CHECK: .loci:7:2: error: cannot assign non-movable type 'const(int_t)'
	value = 1;
}

export void g() {
	int value = 0;
	value = 1;
}

// CHECK: 1 error generated.

